# meander-bot

./: .gitignore  CMakeLists.txt  README.md  package.xml  readme.md  requirements.txt  setup.py
arduino/encoder/: MotorEncoders.ino  MotorEncodersV2.ino  encodermeanderbot.cpp  encodermeanderbot.h
config/: esw.yaml  meanderbot_control.yaml
devel/: .rosinstall  _setup_util.py  local_setup.sh
devel/include/esw/: MotorCommand.h
devel/lib/pkgconfig/: esw.pc  mpu_6050_driver.pc  rplidar_ros.pc  teleop.pc
devel/lib/python3/dist-packages/esw/msg/: _MotorCommand.py
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/share/common-lisp/ros/esw/msg/: _package_MotorCommand.lisp
devel/share/esw/cmake/: esw-msg-paths.cmake  eswConfig.cmake
devel/share/mpu_6050_driver/cmake/: mpu_6050_driverConfig.cmake
devel/share/roseus/ros/esw/: manifest.l
devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
devel/share/teleop/cmake/: teleopConfig.cmake
featherwing_test/: test_feather.py
launch/: encoders.launch  imu_calibration.launch  imu_driver.launch  teleop.launch
mpu6050_test/: blinkatest.py  mpu6050_simpletest.py
msg/: MotorCmd.msg
src/esw/: CMakeLists.txt  motor_controller.py
src/esw/msg/: MotorCommand.msg
src/esw/src/: motor_controller.py
src/mpu_6050_driver/: CMakeLists.txt  package.xml
src/mpu_6050_driver/launch/: imu_driver.launch
src/teleop/: package.xml
src/teleop/launch/: teleop_robot.launch
src/teleop/src/: keyboard_teleop.py
